fix 544 : change color of add button and align it to name input

--- a/docdoku-server/docdoku-server-web/yo/app/less/common/lov.less
+++ b/docdoku-server/docdoku-server-web/yo/app/less/common/lov.less
@@ -114,7 +114,7 @@
 
         button.addLOVValue{
             display: block;
-            margin-left: 5px;
+            margin-left: 24px;
         }
 
         .lovValueDiv{
